@startuml DBv01
!define primary_key(x) <b><color:#b8861b><&key></color> x</b>
!define foreign_key(x) <b><i><color:#aaaaaa><&key></color> x</i></b>
!define column(x) <color:#efefef><&media-record></color> x
!define table(x) entity x << (T, white) >>

table( Company ) {
  primary_key( id ): integer <<PK>>
  column( name ): varchar(255)
  column( country ): varchar(255)
  column( street ): varchar(255)
  column( city ): varchar(255)
  column( zip_code ): varchar(10)
  column( company_id ): varchar(255)
  column( vat_number ): varchar(255)
  column( bank_account_number ): varchar(255)
  column( iban ): varchar(255)
  column( swift ): varchar(255)
  column( signature ): text
}

table( Invoice ) {
  primary_key( id ): integer <<PK>>
  foreign_key( supplier_id ): integer <<FK>>
  foreign_key( subscriber_id ): integer <<FK>>
  column( description ): varchar(255)
  column( payment_type ): varchar(50)
  column( created ): datetime
  column( due_day ): tinyint
  column( vs ): varchar(50)
  column( ks ): varchar(50)
  column( currency ): char(3)
}
Company o--* Invoice: 1:n

table( Invoice_item ) {
  primary_key( id ): integer <<PK>>
  foreign_key( invoice_id ): integer <<FK>>
  column( vat ): tinyint
  column( description ): varchar(255)
  column( price ): decimal(12,4)
  column( unit_count ): float
  column( total_price ): decimal(12,4)
}

Invoice o--* Invoice_item: 1:n

@enduml
